spring configs, constants, controllers